Freedom Sanbox Ant Deploy/src/objects/Transaction__c.object
<CustomObject>
    <fields>
        <fullName>ABS_RET__c</fullName>
        <label>ABS RET %</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Asset_Class__c</fullName>
        <label>Asset Class</label>
        <picklist>
            <picklistValues>
                <fullName>Equity: Mid &amp; Small Cap</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Debt: Short Term</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Equity: Large &amp; Mid Cap</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CAGR__c</fullName>
        <label>CAGR</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Date__c</fullName>
        <label>Current Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Current_Price__c</fullName>
        <label>Current Price</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DIV_RS__c</fullName>
        <label>DIV(RS)</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DR__c</fullName>
        <label>DR</label>
        <picklist>
            <picklistValues>
                <fullName>Y</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Days__c</fullName>
        <label>Days</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Folio_Number__c</fullName>
        <label>Folio Number</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gain__c</fullName>
        <label>Gain</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Owner__c</fullName>
        <label>Owner</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Tranctions</relationshipLabel>
        <relationshipName>Transactions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Portfolio_Type__c</fullName>
        <label>Portfolio Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Purchase_Amount__c</fullName>
        <label>Purchase Amount</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Purchase_Date__c</fullName>
        <label>Purchase Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Purchase_Price__c</fullName>
        <label>Purchase Price</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Scheme_Scrip__c</fullName>
        <label>Scheme/Scrip</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transaction_Type__c</fullName>
        <label>Transaction Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UniqueName__c</fullName>
        <externalId>true</externalId>
        <label>UniqueName</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Units_Quantity__c</fullName>
        <label>Units/Quantity</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>current_Value__c</fullName>
        <label>current Value</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Transaction</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Transaction Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tranctions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>